--- a/Photoid/app/src/main/res/values/strings.xml
+++ b/Photoid/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Photoid</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="media_route_menu_title">Selecione um onde exibir as fotos:</string>
 
 </resources>
