--- a/DropboxCast/app/src/main/res/values/strings.xml
+++ b/DropboxCast/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="label_dropbox">Dropbox</string>
     <string name="text_select_source">Selecione um local para exibir suas fotos e vídeos.</string>
+    <string name="media_route_menu_title">Selecione um Chromecast</string>
 
 </resources>
