--- a/DropboxCast/app/src/main/res/values/strings.xml
+++ b/DropboxCast/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
 <resources>
 
     <string name="app_name">Dropbox Cast</string>
-    <string name="action_settings">Settings</string>
     <string name="label_dropbox">Dropbox</string>
     <string name="text_select_source">Selecione um local para exibir suas fotos e vídeos.</string>
     <string name="media_route_menu_title">Selecione um Chromecast</string>
-    <string name="load_ok">Media loaded successfully</string>
-    <string name="load_nok">Error on load media</string>
+    <string name="load_ok">Content loaded successfully!</string>
+    <string name="load_nok">Error on load Content</string>
+    <string name="no_connection">Not connected do Chromecast!</string>
 
 </resources>
